; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-loop-handles.c_idle_2_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-loop-handles.c_idle_2_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"IDLE_2_CB\0A\00", align 1
@idle_2_handle = common dso_local global i32 0, align 4
@idle_2_cb_called = common dso_local global i32 0, align 4
@idle_2_close_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @idle_2_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @idle_2_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @stderr, align 4
  %4 = call i32 @fprintf(i32 %3, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %5 = load i32, i32* @stderr, align 4
  %6 = call i32 @fflush(i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = icmp eq i32* %7, @idle_2_handle
  %9 = zext i1 %8 to i32
  %10 = call i32 @ASSERT(i32 %9)
  %11 = load i32, i32* @idle_2_cb_called, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* @idle_2_cb_called, align 4
  %13 = load i32*, i32** %2, align 8
  %14 = load i32, i32* @idle_2_close_cb, align 4
  %15 = call i32 @uv_close(i32* %13, i32 %14)
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
